cluster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: ingress-new
    networking.gke.io/managed-certificates: slack-k8s-io, slack-kubernetes-io
spec:
  rules:
    - http:
        paths:
          - path: /infra/event-log/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: slack-event-log
                port:
                  number: 80
          - path: /infra/moderator/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: slack-moderator
                port:
                  number: 80
          - path: /infra/moderator-words/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: slack-moderator-words
                port:
                  number: 80
          - path: /infra/welcomer/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: slack-welcomer
                port:
                  number: 80
          - path: /infra/post-message/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: slack-post-message
                port:
                  number: 80
